--- a/exercises.cabal
+++ b/exercises.cabal
@@ -22,7 +22,7 @@ source-repository head
   location:            https://github.com/haskell-beginners-2022/exercises.git
 
 common common-options
-  build-depends:       base ^>= 4.14
+  build-depends:       base ^>= 4.14, directory
 
   ghc-options:         -Wall
                        -Wcompat
